# StarryAI

./: .gitignore  LICENSE  README.md  README_EN.md  main.py  requirements.txt
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  routes_graphs.py  routes_node_types.py  routes_observability.py  routes_runs.py  routes_secrets.py  ws_runs.py
backend/app/core/: __init__.py  config_validation.py  data_registry.py  errors.py  frame.py  graph_builder.py  graph_compatibility.py  graph_runtime.py  node_async.py  node_base.py  node_catalog.py  node_config.py  node_definition.py  node_discovery.py  node_factory.py  (+10 more)
backend/scripts/: migrate_plaintext_secrets.py  run_perf_baseline.py
backend/tests/: __init__.py  test_api_basic.py  test_config_validation.py  test_core_models.py  test_error_taxonomy.py  test_frontend_build.py  test_graph_builder.py  test_graph_compatibility.py  test_graph_repository.py  test_graphs_api.py  test_launcher_port_selection.py  test_llm_chat_node.py  test_node_authoring_conventions.py  test_node_base_config.py  test_node_definition.py  test_node_discovery.py  test_nodes_behavior.py  test_observability_edges.py  test_payload_path.py  test_perf_baseline.py  test_perf_baseline_script.py  test_real_llm_node.py  test_repository_entry.py  test_run_service.py  test_runs_api.py  test_saved_graph_examples.py  test_scheduler.py  test_scheduler_retry_timeout.py  test_secret_migration.py  test_secret_store.py  test_secrets_api.py  test_spec_registry_factory.py  test_sync_coordinator.py  test_sync_protocol.py
(+118 files in other folders)
