[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "starryai-backend"
version = "0.1.0"
description = "StarryAI backend MVP"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.6.0",
  "jsonschema>=4.23.0",
  "keyring>=25.6.0",
  "cryptography>=44.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.28.0",
  "ruff>=0.4.0",
  "mypy>=1.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
